removed images folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +33,7 @@
           <h5>Supervisor</h5>
           <p>Monitors activity to identify project roadblocks</p>
         </div>
-        <img src="images/icon-Supervisor.svg" alt="">
+        <img src="icon-Supervisor.svg" alt="">
       </div>
 
       <div class="box-container">
@@ -42,7 +42,7 @@
             <h5>Team Builder</h5>
             <p>Scans our talent network to create the optimal team for your project</p>
           </div>
-          <img src="images/icon-team-builder.svg" alt="">
+          <img src="icon-team-builder.svg" alt="">
         </div>
         <div class="box box3">
           <div class="box-text">
@@ -51,7 +51,7 @@
               Regularly evaluates our talent to ensure quality
             </p>
           </div>
-          <img src="images/icon-karma.svg" alt="">
+          <img src="icon-karma.svg" alt="">
         </div>
       </div>
       <div class="box box4">
@@ -61,7 +61,7 @@
             Uses data from past projects to provide better delivery estimates
           </p>
         </div>
-        <img src="images/icon-calculator.svg" alt="">
+        <img src="icon-calculator.svg" alt="">
       </div>
     </section>
   </div>
